# ajeto

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
migrations/: 0001.up.sql
prompts/: marat-no-sudo.txt  marat-single-codeblock.txt  marat-tao-help.txt  marat-tao-remind-about-format.txt  marat-tao.txt
src/: conf.rs  db.rs  history.rs  main.rs  mode.rs  models.rs  openai.rs  prelude.rs
src/mode/: marat.rs
tests/: README.md  start-docker.sh  test_dali.rs  test_marat.rs
tests/assets/: ajetod.Dockerfile  db-1.sql  docker-compose.yml
tests/common/: mod.rs
