[package]
name = "ajeto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ajetod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
config = "0.13"
dotenv = "0.15"
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = "0.29"
rusqlite_migration = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.reqwest]
features = ["json", "blocking"]
